--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/mariage.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/mariage.html.twig
@@ -62,6 +62,7 @@
       {{ form_row(form.Enregistrer, {'label' : 'Enregistrer et continuer'}) }}
     </div>
       {{ form_widget(form.invites, { 'attr': {'class': 'hide'} }) }}
+      {{ form_widget(form.EnregistrerPuisEnvoyer, {'attr': {'class': 'hide'}}) }}
   </div>
 
   {{ form_end(form) }}
