--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
@@ -74,6 +74,7 @@
     <div id="salle" class="tab-pane fade">
       <h3>Gestion de la salle </h3>
       {% if mariage and mariage.budgetSalle %}
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Salle'}) }}" class="btn btn-primary btn-primary">Voir les salles disponibles<span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour la salle : {{ mariage.budgetSalle }}</p>
       {% endif %}
     </div>
@@ -83,6 +84,7 @@
     <div id="traiteur" class="tab-pane fade">
       <h3>Gestion du traiteur </h3>
       {% if mariage and mariage.budgetTraiteur %}
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Traiteur'}) }}" class="btn btn-primary btn-primary">Voir les traiteurs disponibles<span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }}</p>
       {% endif %}
     </div>
@@ -92,6 +94,7 @@
     <div id="photographe" class="tab-pane fade">
       <h3>Gestion du photographe </h3>
       {% if mariage and mariage.budgetPhotographe %}
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Photographe'}) }}" class="btn btn-primary btn-primary">Voir les photographes disponibles<span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le photographe : {{ mariage.budgetPhotographe }}</p>
       {% endif %}
     </div>
@@ -101,6 +104,7 @@
     <div id="DJ" class="tab-pane fade">
       <h3>Gestion du DJ </h3>
       {% if mariage and mariage.budgetDJ %}
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'DJ'}) }}" class="btn btn-primary btn-primary">Voir les DJ disponibles<span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le DJ : {{ mariage.budgetDJ }}</p>
       {% endif %}
     </div>
