--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -9,7 +9,7 @@
   <h1>Organiser votre mariage, gérer votre budget et vos invités</h1>
 
   <p>
-    Pour vous faciliter la vie, nous vous proposerons un site qui vous permettra
+    Pour vous faciliter la vie, nous vous proposons un site qui vous permet
     de facilement organiser votre mariage.
     En vous inscrivant vous pourrez gratuitement :
       <ul><li>Gérer efficacement votre carnet d'adresse pour la fête de votre mariage,
