--- a/src/IUT/NuptiasBundle/Resources/views/Mail/Annonce.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Mail/Annonce.html.twig
@@ -7,10 +7,10 @@
     <title>{% block title %}Ton mariage de rêve{% endblock %}</title>
 
     {% block stylesheets %}
-      <link href=" {{ asset('css/theme.min.css')}}"
+      <link href=" {{ asset('/theme.min.css')}}"
       rel="stylesheet"
       crossorigin="anonymous">
-      <link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css">
+      <link href="{{ asset('/style.css') }}" rel="stylesheet" type="text/css">
     {% endblock %}
 </head>
 
