--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -27,7 +27,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path('iut_nuptias_accueil') }}" style="padding : 0;"><img src="{{asset('public/images/Logo.png')}}" width="50" height="50" /></a>
+            <a class="navbar-brand" href="{{ path('iut_nuptias_accueil') }}" style="padding : 0;"><img src="{{asset('public/images/Logo_blanc_transparent.png')}}" width="50" height="50" /></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
