--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -77,7 +77,7 @@
 
 
 
-      <footer class="footer navbar-fixed-bottom">
+      <footer class="footer navbar-bottom">
         <hr>
           <div class="container text-center">
             <p>Mentions légales © {{ 'now'|date('Y') }}</p>
