--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/pack.html.twig
@@ -8,14 +8,14 @@
 {% block body %}
   <h1>Packs</h1>
 
-  <div class="row">
+  <div class="row-pack">
 
   <div class="col-md-4">
-    <h2>Pack DIY</h2>
+    <h2>Pack Sur Mesure</h2>
     <p class="description-pack">Vous avez déjà une vision d'ensemble sur votre mariage et n'avez pas besoin d'être totalement guidé.
-      Vous voulez garder un certain degré de liberté. Dans ce cas le pack Do It Yourself est fait pour vous.
+      Vous voulez garder un certain degré de liberté. Dans ce cas le pack sur mesure est fait pour vous.
       <hr> Ce pack n'inclut par défaut aucun prestataire.</p>
-    <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'DIY'}) }} ">Commencer</a>
+      <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'DIY'}) }} ">Commencer</a>
   </div>
 
   <div class="col-md-4">
@@ -27,10 +27,10 @@
  </div>
 
   <div class="col-md-4">
-    <h2>Pack All-in-one</h2>
+    <h2>Pack Tout-En-Un</h2>
     <p class="description-pack">Vous n'avez jamais participé à l'organisation d'un mariage.
       Vous voulez que tout soit parfait et vous avez besoin d'aide.
-      Ne vous inquiétez plus en choisissant le pack All-in-one. <hr>
+      Ne vous inquiétez plus en choisissant le pack Tout-En-Un. <hr>
       Ce pack inclut un guide vers tous les prestataires primordiaux à l'organisation de votre mariage.</p>
     <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_mariage', {'pack': 'All'}) }} ">Commencer</a>
   </div>
