--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -43,7 +43,7 @@
                 <li><a href="{{ path('iut_nuptias_packs') }}">Créez votre mariage</a></li>
               {% endif %}
               <li><a href="#">Nos prestataires</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="{{ path('iut_nuptias_contact') }}">Contact</a></li>
 
               {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <li class="dropdown">
