--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,6 +11,15 @@
   float: left;
 }
 
+.row-pack {
+  display: flex;
+}
+
+.col-md-4 > a {
+  position: absolute;
+  bottom: -50px;
+}
+
 .mariage-contenu {
   width: 90%;
   float: right;
