--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -80,7 +80,7 @@
       <footer class="footer navbar-bottom">
         <hr>
           <div class="container text-center">
-            <p>Mentions légales © {{ 'now'|date('Y') }}</p>
+            <p>Projet Réalisé à l'IUT 2 de Grenoble - Mentions légales © {{ 'now'|date('Y') }}</p>
           </div>
       </footer>
 
