--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -1,5 +1,9 @@
 
-{% extends "IUTNuptiasBundle::layout.html.twig" %}
+{% extends "::layout.html.twig" %}
+
+{% block stylesheets %} 
+
+{% endblock %}
 
 {% block title %}
   {{ parent() }} - Accueil
