Ajout service pour client

--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/Dash.html.twig
@@ -73,6 +73,20 @@
 
     <div id="salle" class="tab-pane fade">
       <h3>Gestion de la salle </h3>
+      {% for service in app.user.getServices() %}
+        {% if class(service) == 'Salle' %}
+          <div class="well" style="display: inline-block; width: 25%; min-width: 200px; vertical-align: top">
+            <h4> {{ class(service) }} à {{ service.ville }}</h4>
+            <p>Description : {{ service.description }}</p>
+            <p>Adresse : {{ service.adresse }}</p>
+            <p>Prix : {{ service.prix }}</p>
+            {% if service.capacite is defined %}
+              <p>Capacite : {{ service.capacite }}</p>
+            {% endif %}
+            <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_remove_service_client', {'id_service': service.id, 'type': class(service)}) }}">Supprimer</a>
+          </div>
+        {% endif %}
+      {% endfor %}
       {% if mariage and mariage.budgetSalle %}
         <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Salle'}) }}" class="btn btn-primary btn-primary">Voir les salles disponibles<span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour la salle : {{ mariage.budgetSalle }}</p>
@@ -83,8 +97,22 @@
 
     <div id="traiteur" class="tab-pane fade">
       <h3>Gestion du traiteur </h3>
+      {% for service in app.user.getServices() %}
+        {% if class(service) == 'Traiteur' %}
+          <div class="well" style="display: inline-block; width: 25%; min-width: 200px; vertical-align: top">
+            <h4> {{ class(service) }} à {{ service.ville }}</h4>
+            <p>Description : {{ service.description }}</p>
+            <p>Adresse : {{ service.adresse }}</p>
+            <p>Prix : {{ service.prix }}</p>
+            {% if service.capacite is defined %}
+              <p>Capacite : {{ service.capacite }}</p>
+            {% endif %}
+            <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_remove_service_client', {'id_service': service.id, 'type': class(service)}) }}">Choisir</a>
+          </div>
+        {% endif %}
+      {% endfor %}
       {% if mariage and mariage.budgetTraiteur %}
-        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Traiteur'}) }}" class="btn btn-primary btn-primary">Voir les traiteurs disponibles<span class="glyphicon glyphicon-list"></span></a>
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Traiteur'}) }}" class="btn btn-primary btn-primary">Voir les traiteurs disponibles <span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le traiteur : {{ mariage.budgetTraiteur }}</p>
       {% endif %}
     </div>
@@ -93,8 +121,22 @@
 
     <div id="photographe" class="tab-pane fade">
       <h3>Gestion du photographe </h3>
+      {% for service in app.user.getServices() %}
+        {% if class(service) == 'Photographe' %}
+          <div class="well" style="display: inline-block; width: 25%; min-width: 200px; vertical-align: top">
+            <h4> {{ class(service) }} à {{ service.ville }}</h4>
+            <p>Description : {{ service.description }}</p>
+            <p>Adresse : {{ service.adresse }}</p>
+            <p>Prix : {{ service.prix }}</p>
+            {% if service.capacite is defined %}
+              <p>Capacite : {{ service.capacite }}</p>
+            {% endif %}
+            <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_remove_service_client', {'id_service': service.id, 'type': class(service)}) }}">Supprimer</a>
+          </div>
+        {% endif %}
+      {% endfor %}
       {% if mariage and mariage.budgetPhotographe %}
-        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Photographe'}) }}" class="btn btn-primary btn-primary">Voir les photographes disponibles<span class="glyphicon glyphicon-list"></span></a>
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'Photographe'}) }}" class="btn btn-primary btn-primary">Voir les photographes disponibles <span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le photographe : {{ mariage.budgetPhotographe }}</p>
       {% endif %}
     </div>
@@ -103,8 +145,22 @@
 
     <div id="DJ" class="tab-pane fade">
       <h3>Gestion du DJ </h3>
+      {% for service in app.user.getServices() %}
+        {% if class(service) == 'DJ' %}
+          <div class="well" style="display: inline-block; width: 25%; min-width: 200px; vertical-align: top">
+            <h4> {{ class(service) }} à {{ service.ville }}</h4>
+            <p>Description : {{ service.description }}</p>
+            <p>Adresse : {{ service.adresse }}</p>
+            <p>Prix : {{ service.prix }}</p>
+            {% if service.capacite is defined %}
+              <p>Capacite : {{ service.capacite }}</p>
+            {% endif %}
+            <a class="btn btn-primary btn-info" href="{{ path('iut_nuptias_remove_service_client', {'id_service': service.id, 'type': class(service)}) }}">Supprimer</a>
+          </div>
+        {% endif %}
+      {% endfor %}
       {% if mariage and mariage.budgetDJ %}
-        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'DJ'}) }}" class="btn btn-primary btn-primary">Voir les DJ disponibles<span class="glyphicon glyphicon-list"></span></a>
+        <a href="{{ path('iut_nuptias_affiche_services', {'type' : 'DJ'}) }}" class="btn btn-primary btn-primary">Voir les DJ disponibles <span class="glyphicon glyphicon-list"></span></a>
         <p> Budget pour le DJ : {{ mariage.budgetDJ }}</p>
       {% endif %}
     </div>
