--- a/src/IUT/NuptiasBundle/Resources/views/layout.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 {% extends "::layout.html.twig" %}
 
 {% block stylesheets %} <!-- feuille de styles pour les pages autre que index.html.twig -->
-
+  {{ parent() }}
 {% endblock %}
 
 {% block title %}
