--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -1,8 +1,8 @@
 
 {% extends "::layout.html.twig" %}
 
-{% block stylesheets %} 
-
+{% block stylesheets %}
+{{ parent() }}
 {% endblock %}
 
 {% block title %}
