--- a/web/css/style.css
+++ b/web/css/style.css
@@ -47,7 +47,60 @@
   float: right;
 }
 
-/*
-.mariage-budget {
-    border-left: 1px solid black;
-}*/
+
+.tabbable.custom-tabs > .nav-tabs, .tabbable.custom-tabs > .nav-tabs > li, .tabbable.custom-tabs > .nav-tabs > li > a {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: none;
+}
+.tabbable.custom-tabs > .nav-tabs > li > a {
+  padding: 20px 25px;
+  margin-right: 3px;
+  background-color: lightgray;
+  color: black;
+  box-shadow: inset 0 -8px 7px -9px rgba(0,0,0,.4);
+}
+.tabbable.custom-tabs > .nav-tabs > li > a:hover {
+  border: none;
+  background-color: #f0f0f0
+}
+.tabbable.custom-tabs > .nav-tabs > li.active > a {
+  background-color: #f5f5f5;
+  /*background-color:#ED5D24;
+  color: white;*/
+  color: #696969;
+  box-shadow: none;
+}
+
+.tabbable.custom-tabs > .tab-content {
+  background-color: #f5f5f5;
+  /*background-color:#ED5D24;
+  color: white;*/
+  padding: 20px;
+  padding-top: 10px;
+  min-height: 200px;
+}
+
+.pane {
+  width: 100%;
+  overflow: hidden;
+}
+
+.tab.right-side {
+}
+
+.tab.left-side {
+  float: left;
+  width: 50%;
+  /*border-right: 1px solid #696969;*/
+}
+#chartdiv {
+  width: 100%;
+  height: 500px;
+}
+@media screen and (max-width: 600px) {
+  .tab.left-side {
+    float: none;
+  }
+}
