--- a/src/IUT/NuptiasBundle/Resources/views/layout.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/layout.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheets %} <!-- feuille de styles pour les pages autre que index.html.twig -->
   {{ parent() }}
+  <link rel="stylesheet" href="{{ asset('css/theme_general.css')}}" />
 {% endblock %}
 
 {% block title %}
