--- a/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
+++ b/src/IUT/NuptiasBundle/Resources/views/Nuptias/index.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheets %}
 {{ parent() }}
+<link rel="stylesheet" href="{{ asset('css/theme_index.css')}}" />
 {% endblock %}
 
 {% block title %}
@@ -10,9 +11,10 @@
 {% endblock %}
 
 {% block body %}
-  <h1>Organiser votre mariage, gérer votre budget et vos invités</h1>
+  <h1><img src="{{asset('public/images/Logo.png')}}" alt="Logo" width="100" height="100">Organiser votre mariage</h1>
+  <h4>Gérer vos invités, votre budget et vos prestataires en quelques clics</h4>
 
-  <p>
+  <!--<p>
     Pour vous faciliter la vie, nous vous proposons un site qui vous permet
     de facilement organiser votre mariage.
     En vous inscrivant vous pourrez gratuitement :
@@ -26,6 +28,6 @@
       </ul>
   </p>
 
-  <a href="{{ path('iut_nuptias_accueil') }}">De plus des packs ... </a>
+  <a href="{{ path('iut_nuptias_accueil') }}">De plus des packs ... </a> -->
 
 {% endblock %}
