--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,7 +7,7 @@
 
 .btn{
   border-radius: 5px;
-  margin: 5px;
+  margin: 5px 5px 5px 0px;
 }
 
 .form-control{
@@ -22,6 +22,11 @@
 
 .row-pack {
   display: flex;
+}
+
+.col-md-4{
+  border: 2px;
+  border-color: #de8612;
 }
 
 .col-md-4 > a {
@@ -78,19 +83,20 @@
 }
 .tabbable.custom-tabs > .nav-tabs > li.active > a {
   background-color: #f5f5f5;
-  /*background-color:#ED5D24;
-  color: white;*/
+  background-color:#ED5D24;
+  color: white;
   color: #696969;
   box-shadow: none;
 }
 
 .tabbable.custom-tabs > .tab-content {
   background-color: #f5f5f5;
-  /*background-color:#ED5D24;
-  color: white;*/
+  background-color:#ED5D24;
+  color: white;
   padding: 20px;
   padding-top: 10px;
   min-height: 200px;
+  border-radius: 0px 5px 5px 5px;
 }
 
 .pane {
